@@ -72,6 +72,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 26560) On allusers if limit < total number of users, last user gets duplicate
 * (bug 25135) add "normalized" to action=parse
 * (bug 26460) Add support for listing category members by category pageid
+* (bug 26482) add a imimages param to prop=images
 
 === Languages updated in 1.18 ===
 
